tweak the price to fix alignment

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -125,6 +125,7 @@ ul.breadcrumb
     span.price
       float: right
       padding-right: 10px
+      margin-top: 5px
 .buy_button
   width: 100%
 #cart
